Explicity define height of button container to prevent unwanted stretching on mobile.

--- a/app/makeup-consultation/page.module.css
+++ b/app/makeup-consultation/page.module.css
@@ -278,7 +278,7 @@
     top: auto;
     left: 50%;
     transform: translateX(-50%);
-    height: fit-content;
+    height: 45px;
     width: 100%;
     max-width: 500px;
     display: grid;
